registry-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
    #  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local.dev
      http:
#    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
